[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/deck/Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/deck/DecksManager.gd" type="Script" id=3]
[ext_resource path="res://src/GameManager.gd" type="Script" id=4]
[ext_resource path="res://src/Camera.gd" type="Script" id=5]
[ext_resource path="res://src/gamestates/Distribute.gd" type="Script" id=6]
[ext_resource path="res://src/gamestates/GameStates.gd" type="Script" id=7]
[ext_resource path="res://src/gamestates/ChooseStarter.gd" type="Script" id=8]
[ext_resource path="res://src/gamestates/Turn.gd" type="Script" id=9]
[ext_resource path="res://src/Table.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/gamestates/action-handlers/PlaceHandler.gd" type="Script" id=11]
[ext_resource path="res://src/gamestates/action-handlers/DefenseHandler.gd" type="Script" id=12]
[ext_resource path="res://src/gamestates/action-handlers/AttackHandler.gd" type="Script" id=13]
[ext_resource path="res://src/gamestates/action-handlers/GobbitHandler.gd" type="Script" id=14]
[ext_resource path="res://src/gamestates/action-handlers/SpiritHandler.gd" type="Script" id=15]
[ext_resource path="res://src/player/MouseRay.gd" type="Script" id=16]
[ext_resource path="res://src/gamestates/Gobbit.gd" type="Script" id=17]
[ext_resource path="res://src/player/PlayerPointers.gd" type="Script" id=18]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 0.54902, 0.54902, 0.54902, 1 )
fog_depth_begin = 113.9
fog_depth_end = 48.1
glow_enabled = true
glow_bloom = 0.5

[sub_resource type="Animation" id=2]
resource_name = "Shake"
length = 0.3
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:h_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.0366903, 0.0890125, 0.00279495, -0.0564303, -0.03821, 0.0504302, 0.0137164, 0, -0.0670166, -0.005043, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.000917258, -0.0177797, -0.0148404, -0.0275272, -0.0293923, 0.0233806, 0.0568252, 0, -0.158284, -0.0207189, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.3 )
}

[node name="GameManager" type="Spatial"]
script = ExtResource( 4 )

[node name="GameStates" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Distribute" type="Node" parent="GameStates"]
script = ExtResource( 6 )
distribution_time = 1.0

[node name="ChooseStarter" type="Node" parent="GameStates"]
script = ExtResource( 8 )

[node name="Turn" type="Node" parent="GameStates"]
script = ExtResource( 9 )

[node name="PlaceHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 11 )

[node name="AttackHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 13 )

[node name="SpiritHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 15 )

[node name="DefenseHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 12 )

[node name="GobbitHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 14 )

[node name="Gobbit" type="Node" parent="GameStates"]
script = ExtResource( 17 )

[node name="Pivot" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Rail" type="Tween" parent="Pivot"]

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65433e-14, 0, 10, 0 )
environment = SubResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="Pivot/Camera"]
anims/Shake = SubResource( 2 )

[node name="PlayerPOV" type="Spatial" parent="Pivot"]
transform = Transform( -1.62921e-07, -0.866025, 0.5, 0, 0.5, 0.866025, -1, 1.41093e-07, -8.14603e-08, 4, 4.5, 0 )

[node name="CameraLobby" type="Spatial" parent="Pivot"]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 10, 0 )

[node name="Table" parent="." instance=ExtResource( 10 )]

[node name="Light" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 16, 0 )
light_energy = 0.24
shadow_enabled = true
shadow_bias = 0.05
shadow_contact = 0.14
directional_shadow_max_distance = 200.0

[node name="Decks" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Graveyard" parent="Decks" groups=[
"deck_graveyard",
] instance=ExtResource( 1 )]

[node name="Cards" type="Spatial" parent="."]

[node name="PlayerPointers" type="Spatial" parent="."]
script = ExtResource( 18 )

[node name="MouseRay" type="RayCast" parent="."]
visible = false
enabled = true
cast_to = Vector3( 0, 0, 0 )
collision_mask = 3
collide_with_areas = true
script = ExtResource( 16 )

[node name="GUI" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
